fix(hyprland,waybar): Remove gaps & rounded corners
- Remove margin around waybar
- Remove gaps between & around windows

--- a/dotfiles/.config/waybar/style.css
+++ b/dotfiles/.config/waybar/style.css
@@ -21,7 +21,6 @@
 
 window#waybar {
   background: @background-color;
-  border-radius: 0.5rem;
 }
 
 tooltip {
